added Menu bars at the bottom of all screens/activitys added All formulas on formulas activity

--- a/app/src/main/res/layout/activity_concepts.xml
+++ b/app/src/main/res/layout/activity_concepts.xml
@@ -58,11 +58,11 @@
 
         <Button
             android:id="@+id/bReadings"
-            android:onClick="onClick"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Readings" />
+            android:onClick="onClick"
+            android:text="Read" />
 
     </LinearLayout>
 
