--- a/app/src/main/res/layout/activity_formulas.xml
+++ b/app/src/main/res/layout/activity_formulas.xml
@@ -1,9 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="net.hdefi.joesema.hdefi.FormulasActivity">
 
-</android.support.constraint.ConstraintLayout>
+
+
+        <ScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="525dp"
+                    android:src="@drawable/formulas_1" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="525dp"
+                    android:src="@drawable/formulas_2" />
+
+            </LinearLayout>
+
+
+        </ScrollView>
+
+
+
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
+
+
+
+            <Button
+                android:id="@+id/bConcepts"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="15dp"
+                android:layout_toEndOf="@+id/linearLayout"
+                android:layout_toRightOf="@+id/linearLayout"
+                android:onClick="onClick"
+                android:text="Concepts" />
+
+            <Button
+                android:id="@+id/bFormulas"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/bConcepts"
+                android:layout_toEndOf="@+id/bConcepts"
+                android:layout_toRightOf="@+id/bConcepts"
+                android:onClick="onClick"
+                android:text="Formulas" />
+
+            <Button
+                android:id="@+id/bMessages"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/bFormulas"
+                android:layout_toEndOf="@+id/bFormulas"
+                android:layout_toRightOf="@+id/bFormulas"
+                android:onClick="onClick"
+                android:text="Messages" />
+
+            <Button
+                android:id="@+id/bReadings"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="onClick"
+                android:text="Read" />
+
+        </LinearLayout>
+
+</RelativeLayout>
