--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context="net.hdefi.joesema.hdefi.LoginActivity">
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="143dp"
+        android:layout_height="168dp"
+        app:srcCompat="@mipmap/ic_launcher"
+        tools:layout_editor_absoluteX="122dp"
+        tools:layout_editor_absoluteY="16dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
 
     <Button
         android:id="@+id/bLogin"
@@ -18,25 +28,36 @@
         android:text="Login" />
 
     <EditText
-        android:id="@+id/etPassword"
+        android:id="@+id/etLogPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/bLogin"
+        android:layout_centerHorizontal="true"
         android:layout_marginBottom="72dp"
         android:ems="10"
         android:hint="Psu Password"
-        android:inputType="textPassword"
-        android:layout_above="@+id/bLogin"
-        android:layout_centerHorizontal="true" />
+        android:inputType="textPassword" />
 
     <EditText
-        android:id="@+id/etEmail"
+        android:id="@+id/etLogEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="35dp"
         android:ems="10"
         android:hint="abc123@psu.edu"
         android:inputType="textEmailAddress"
-        android:layout_above="@+id/etPassword"
-        android:layout_alignLeft="@+id/etPassword"
-        android:layout_alignStart="@+id/etPassword" />
+        android:layout_above="@+id/etLogPassword"
+        android:layout_alignLeft="@+id/etLogPassword"
+        android:layout_alignStart="@+id/etLogPassword" />
+
+    <TextView
+        android:id="@+id/tvRegister"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/bLogin"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="37dp"
+        android:text="Don't have an account? Register Here!" />
+
+
+
 </RelativeLayout>
