--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -43,6 +43,14 @@
             android:hint="Enter Password for new account"
             android:inputType="textPassword" />
 
+        <EditText
+            android:id="@+id/etRegPasswordCon"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Confirm Password"
+            android:inputType="textPassword" />
+
         <Button
             android:id="@+id/bRegister"
             android:layout_width="match_parent"
