--- a/app/src/main/res/menu/main_menu_logout.xml
+++ b/app/src/main/res/menu/main_menu_logout.xml
@@ -3,9 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_add"
-        android:icon="@mipmap/ic_add_white_24dp"
-        android:title="Add Post"
+        android:id="@+id/action_logout"
+        android:title="Log out"
         app:showAsAction="always" />
 
 </menu>
