--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -58,6 +58,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
+        android:background="@color/colorPrimary"
+        android:textColor="#ffffff"
         android:layout_weight="1"
         android:text="Submit" />
 
