Blog can be displayed

--- a/app/src/main/res/layout/activity_messages.xml
+++ b/app/src/main/res/layout/activity_messages.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context="net.hdefi.joesema.hdefi.MessagesActivity">
 
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/blog_list">
+
+
+
+    </android.support.v7.widget.RecyclerView>
+
+
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
