--- a/app/src/main/res/layout/activity_messages.xml
+++ b/app/src/main/res/layout/activity_messages.xml
@@ -10,10 +10,8 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/blog_list">
-
-
-
+        android:id="@+id/blog_list"
+        android:paddingBottom="70dp">
     </android.support.v7.widget.RecyclerView>
 
 
