--- a/app/src/main/res/layout/activity_readings.xml
+++ b/app/src/main/res/layout/activity_readings.xml
@@ -9,7 +9,8 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingBottom="70dp">
 
         <EditText
             android:id="@+id/etTitle"
