--- a/app/src/main/res/layout/activity_readings.xml
+++ b/app/src/main/res/layout/activity_readings.xml
@@ -54,7 +54,7 @@
 
 
         <Button
-            android:id="@+id/bConcepts"
+            android:id="@+id/bConcepts2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -65,12 +65,12 @@
             android:text="Concepts" />
 
         <Button
-            android:id="@+id/bFormulas"
+            android:id="@+id/bFormulas2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/bConcepts"
-            android:layout_toEndOf="@+id/bConcepts"
-            android:layout_toRightOf="@+id/bConcepts"
+            android:layout_alignBottom="@+id/bConcepts2"
+            android:layout_toEndOf="@+id/bConcepts2"
+            android:layout_toRightOf="@+id/bConcepts2"
             android:onClick="onClick"
             android:text="Formulas" />
 
@@ -78,9 +78,9 @@
             android:id="@+id/bMessages"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/bFormulas"
-            android:layout_toEndOf="@+id/bFormulas"
-            android:layout_toRightOf="@+id/bFormulas"
+            android:layout_alignTop="@+id/bFormulas2"
+            android:layout_toEndOf="@+id/bFormulas2"
+            android:layout_toRightOf="@+id/bFormulas2"
             android:onClick="onClick"
             android:text="Messages" />
 
