--- a/app/src/main/res/menu/main_menu_nextpage.xml
+++ b/app/src/main/res/menu/main_menu_nextpage.xml
@@ -4,6 +4,6 @@
 
     <item
         android:id="@+id/action_nextpage"
-        android:title="Page 2"
+        android:title="@string/page_2"
         app:showAsAction="always" />
 </menu>
