--- a/app/src/main/res/menu/main_menu_clear.xml
+++ b/app/src/main/res/menu/main_menu_clear.xml
@@ -4,6 +4,6 @@
 
     <item
         android:id="@+id/action_clear"
-        android:title="Clear All"
+        android:title="@string/clear_all"
         app:showAsAction="always" />
 </menu>
