--- a/app/src/main/res/menu/main_menu_logout.xml
+++ b/app/src/main/res/menu/main_menu_logout.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/action_logout"
-        android:title="Log out"
+        android:title="@string/log_out"
         app:showAsAction="always" />
 
 </menu>
