--- a/app/src/main/res/menu/main_menu_savereading.xml
+++ b/app/src/main/res/menu/main_menu_savereading.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/action_saveReading"
-        android:title="Save Reading"
+        android:title="@string/save_reading"
         app:showAsAction="always" />
 
 </menu>
